--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^9.0.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "rollup": "^3.2.5",
     "sort-package-json": "^2.0.0",
     "typescript": "^4.8.4"
