--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "ootidea",
   "main": "index.js",
   "scripts": {
+    "format": "run-p format:*",
+    "format:prettier": "prettier --write \"src/**/*\"",
     "format:package-json": "sort-package-json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
