--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^9.0.2",
+    "@types/jest": "^29.2.2",
+    "jest": "^29.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rollup": "^3.2.5",
     "sort-package-json": "^2.0.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
   "volta": {
