--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format": "run-p format:*",
     "format:prettier": "prettier --write \"src/**/*\"",
     "format:package-json": "sort-package-json",
-    "test": "jest"
+    "test": "jest",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^9.0.2",
