--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "license": "CC0-1.0",
   "author": "ootidea",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "build": "rollup -c",
     "format": "run-p format:*",
     "format:prettier": "prettier --write \"src/**/*\"",
     "format:package-json": "sort-package-json",
@@ -21,6 +23,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@rollup/plugin-multi-entry": "^6.0.0",
     "@rollup/plugin-typescript": "^9.0.2",
     "@types/jest": "^29.2.2",
     "jest": "^29.2.2",
@@ -29,6 +32,7 @@
     "rollup": "^3.2.5",
     "sort-package-json": "^2.0.0",
     "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4"
   },
   "volta": {
