--- a/package.json
+++ b/package.json
@@ -15,21 +15,19 @@
     "format": "run-p format:*",
     "format:prettier": "prettier --write \"src/**/*\"",
     "format:package-json": "sort-package-json",
-    "test": "jest",
+    "test": "vitest run",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@rollup/plugin-multi-entry": "^6.0.0",
     "@rollup/plugin-typescript": "^9.0.2",
-    "@types/jest": "^29.2.2",
-    "jest": "^29.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "rollup": "^3.2.5",
     "sort-package-json": "^2.0.0",
-    "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vitest": "^0.25.1"
   },
   "volta": {
     "node": "18.12.1"
