--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "rootDir": "src",
-    "declaration": true
+    "declaration": true,
+    "types": ["vitest/globals"]
   },
   "include": ["src"]
 }
