--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "sort-package-json": "^2.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
