--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "base-up",
   "version": "0.0.0",
   "private": true,
+  "license": "CC0-1.0",
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
