--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier": "^2.7.1",
     "sort-package-json": "^2.1.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vitest": "^0.25.1"
   },
   "volta": {
     "node": "18.12.1"
