chore: define test command

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "run-p format:*",
     "format:prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,scss}\"",
     "format:package-json": "sort-package-json",
+    "test": "vitest run",
     "preview": "vite preview"
   },
   "devDependencies": {
