--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
   "name": "base-up",
-  "author": "ootidea",
   "version": "0.0.4",
   "license": "CC0-1.0",
+  "author": "ootidea",
   "type": "module",
-  "main": "./dist/base-up.js",
-  "types": "./dist/types/index.d.ts",
-  "files": [
-    "dist"
-  ],
   "exports": {
     ".": {
       "import": "./dist/base-up.js",
@@ -16,18 +11,24 @@
       "types": "./dist/types/index.d.ts"
     }
   },
+  "main": "./dist/base-up.js",
+  "types": "./dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "vite build && tsc -p tsconfig-emit.json",
     "dev": "vite",
     "format": "run-p format:*",
     "format:prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,scss}\"",
     "format:package-json": "sort-package-json",
+    "release": "npm run build && npm publish --access=public && package-version-git-tag --push",
     "test": "vitest --silent=false",
-    "typecheck": "tsc",
-    "preview": "vite preview"
+    "typecheck": "tsc"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
+    "package-version-git-tag": "^3.0.0",
     "prettier": "^2.7.1",
     "sort-package-json": "^2.1.0",
     "typescript": "^4.6.4",
