add package.json keywords

--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
   "name": "base-up",
   "version": "0.1.1",
+  "keywords": [
+    "stdlib",
+    "functional",
+    "immutable",
+    "collection",
+    "Array",
+    "Iterable",
+    "Map",
+    "Set",
+    "Record",
+    "type-predicate",
+    "assert",
+    "groupBy",
+    "chunk",
+    "lexicographic-order",
+    "pipe",
+    "set-operation"
+  ],
   "license": "CC0-1.0",
   "author": "ootidea",
   "type": "module",
