add package.json keywords

--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "Map",
     "Set",
     "Record",
+    "map",
+    "filter",
+    "chunk",
+    "groupBy",
+    "set-operation",
+    "difference-set",
+    "union-set",
+    "intersection-set",
     "type-predicate",
     "assert",
-    "groupBy",
-    "chunk",
     "lexicographic-order",
     "pipe",
-    "set-operation"
+    "curry"
   ],
   "license": "CC0-1.0",
   "author": "ootidea",
