doc: enhance package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "base-up",
   "version": "0.7.1",
+  "description": "A modern TypeScript utility library",
   "keywords": [
     "stdlib",
     "functional",
+    "functional-programming",
     "immutable",
     "collection",
     "Array",
@@ -13,17 +15,23 @@
     "Record",
     "map",
     "filter",
+    "shuffle",
+    "sort",
+    "join",
     "chunk",
     "groupBy",
+    "permutation",
     "set-operation",
     "difference-set",
     "union-set",
     "intersection-set",
     "type-predicate",
+    "type-assertion",
     "assert",
     "lexicographic-order",
     "pipe",
-    "curry"
+    "curry",
+    "modulo"
   ],
   "license": "CC0-1.0",
   "author": "ootidea",
