--- a/package.json
+++ b/package.json
@@ -61,9 +61,10 @@
     "postversion": "git push && git push --tags && npm publish ./",
     "prepublishOnly": "npm run build",
     "test": "vitest --silent=false",
-    "typecheck": "tsc"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@tsconfig/strictest": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
     "sort-package-json": "^2.4.1",
