--- a/package.json
+++ b/package.json
@@ -38,6 +38,14 @@
     "prime-test",
     "wheel-factorization"
   ],
+  "homepage": "https://github.com/ootidea/base-up#readme",
+  "bugs": {
+    "url": "https://github.com/ootidea/base-up/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ootidea/base-up.git"
+  },
   "license": "CC0-1.0",
   "author": "ootidea",
   "sideEffects": false,
