--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "moduleResolution": "bundler",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "verbatimModuleSyntax": false,
-    "types": ["vitest/globals"]
+    "verbatimModuleSyntax": false
   },
   "include": ["src"]
 }
