--- a/package.json
+++ b/package.json
@@ -52,18 +52,18 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/base-up.js",
-      "require": "./dist/base-up.cjs",
-      "types": "./dist/types/index.d.ts"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
-  "main": "./dist/base-up.js",
-  "types": "./dist/types/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "vite build && tsc -p tsconfig-emit.json",
+    "build": "tsup",
     "dev": "vite",
     "format": "run-p format:*",
     "format:prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,scss}\"",
@@ -78,6 +78,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
     "sort-package-json": "^2.4.1",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.2",
     "vite": "^4.2.1",
     "vitest": "^0.29.8"
