--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "Map",
     "Set",
     "Record",
-    "map",
     "filter",
     "take",
     "drop",
@@ -31,7 +30,7 @@
     "union-set",
     "intersection-set",
     "type-predicate",
-    "type-assertion",
+    "assertion-function",
     "assert",
     "lexicographic-order",
     "pipe",
