add package.json keywords

--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "shuffle",
     "sort",
     "join",
+    "split",
     "chunk",
+    "minBy",
+    "maxBy",
     "groupBy",
+    "toMultiset",
     "permutation",
     "set-operation",
     "difference-set",
     "union-set",
     "intersection-set",
+    "isDisjoint",
     "type-predicate",
     "assertion-function",
     "assert",
@@ -39,7 +44,21 @@
     "modulo",
     "prime-test",
     "wheel-factorization",
-    "nullish"
+    "random-integer",
+    "capitalize",
+    "toCamelCase",
+    "toSnakeCase",
+    "toKebabCase",
+    "nullish",
+    "integer-range",
+    "NonEmptyArray",
+    "DiscriminatedUnion",
+    "UnionToIntersection",
+    "Branded-type",
+    "Nominal-typing",
+    "NestedProperty",
+    "forever",
+    "Promisable"
   ],
   "homepage": "https://github.com/ootidea/base-up#readme",
   "bugs": {
