improve package.json keywords

--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "functional",
     "functional-programming",
     "immutable",
+    "lazy-evaluation",
     "collection",
-    "Array",
-    "Iterable",
-    "Map",
-    "Set",
-    "Record",
+    "map",
     "filter",
     "take",
     "drop",
