--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "base-up",
   "version": "0.21.0",
-  "description": "A modern TypeScript utility library with numerous versatile functions, constants, and types",
+  "description": "A modern TypeScript utility library with numerous versatile functions, types, and constants",
   "keywords": [
     "stdlib",
     "type-level",
