--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "base-up",
   "version": "1.0.0",
-  "description": "A modern TypeScript utility library with numerous versatile functions, types, and constants",
+  "description": "A modern TypeScript utility library.",
   "keywords": [
     "stdlib",
     "type-level",
@@ -48,13 +48,8 @@
     "nullish",
     "integer-range",
     "NonEmptyArray",
-    "DiscriminatedUnion",
-    "UnionToIntersection",
-    "Branded-type",
-    "Nominal-typing",
     "NestedProperty",
-    "forever",
-    "Promisable"
+    "forever"
   ],
   "homepage": "https://github.com/ootidea/base-up#readme",
   "bugs": {
