--- a/package.json
+++ b/package.json
@@ -95,7 +95,5 @@
     "typescript": "^5.1.6",
     "vitest": "^0.33.0"
   },
-  "volta": {
-    "node": "18.12.1"
-  }
+  "packageManager": "pnpm@9.10.0"
 }
